force-app/main/default/objects/ServiceSchedule__c/ServiceSchedule__c.object-meta.xml
<CustomObject>
    <label>Service Schedule</label>
    <nameField>
        <label>Service Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>