force-app/main/default/objects/ServiceSchedule__c/fields/AllDay__c.field-meta.xml
<CustomField>
    <fullName>AllDay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All day</label>
    <type>Checkbox</type>
</CustomField>