force-app/main/default/objects/ServiceSchedule__c/fields/AttendanceSummary__c.field-meta.xml
<CustomField>
    <fullName>AttendanceSummary__c</fullName>
    <formula>IF(NumAbsentServiceDeliveries__c &gt; 0 || NumPresentServiceDeliveries__c &gt; 0,
    TEXT(ROUND(AttendanceRate__c,2)*100) &amp; &quot;% (&quot; &amp; 
    TEXT(NumPresentServiceDeliveries__c) &amp; 
    &quot;/&quot; &amp; 
    TEXT(NumPresentServiceDeliveries__c + NumAbsentServiceDeliveries__c) &amp;
    &quot;)&quot;,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendance Summary</label>
    <type>Text</type>
</CustomField>