force-app/main/default/objects/ServiceSchedule__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Campaign that this Service Schedule is linked to.</description>
    <inlineHelpText>The Campaign that this Service Schedule is linked to.</inlineHelpText>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Service Schedules</relationshipLabel>
    <relationshipName>ServiceSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>