force-app/main/default/objects/ServiceSchedule__c/fields/CreateServiceSessionRecords__c.field-meta.xml
<CustomField>
    <fullName>CreateServiceSessionRecords__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When selected, Service Session records will be automatically created.</inlineHelpText>
    <label>Create Service Session</label>
    <type>Checkbox</type>
</CustomField>