force-app/main/default/objects/ServiceSchedule__c/fields/DefaultServiceQuantity__c.field-meta.xml
<CustomField>
    <fullName>DefaultServiceQuantity__c</fullName>
    <description>The default Service quantity reflected on a Service Delivery when tracking attendance.</description>
    <inlineHelpText>The default Service quantity reflected on a Service Delivery when tracking attendance.</inlineHelpText>
    <label>Default Service Quantity</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>