force-app/main/default/objects/ServiceSchedule__c/fields/FirstSessionEnd__c.field-meta.xml
<CustomField>
    <fullName>FirstSessionEnd__c</fullName>
    <label>First Session End</label>
    <type>DateTime</type>
</CustomField>