force-app/main/default/objects/ServiceSchedule__c/fields/FirstSessionStart__c.field-meta.xml
<CustomField>
    <fullName>FirstSessionStart__c</fullName>
    <defaultValue>NOW() + ((30 - MOD( Minute( ( TIMEVALUE( NOW() ) ) ), 30 )) / 60)/24</defaultValue>
    <label>First Session Start</label>
    <type>DateTime</type>
</CustomField>