force-app/main/default/objects/ServiceSchedule__c/fields/MonthlyRecurrenceOption__c.field-meta.xml
<CustomField>
    <fullName>MonthlyRecurrenceOption__c</fullName>
    <label>Monthly Recurrence Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>