force-app/main/default/objects/ServiceSchedule__c/fields/NumAbsentServiceDeliveries__c.field-meta.xml
<CustomField>
    <fullName>NumAbsentServiceDeliveries__c</fullName>
    <label>Number of Absent Service Deliveries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>