force-app/main/default/objects/ServiceSchedule__c/fields/NumAbsentServiceSessions__c.field-meta.xml
<CustomField>
    <fullName>NumAbsentServiceSessions__c</fullName>
    <label>Number of Absent Service Sessions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>