force-app/main/default/objects/ServiceSchedule__c/fields/NumberOfServiceSessions__c.field-meta.xml
<CustomField>
    <fullName>NumberOfServiceSessions__c</fullName>
    <label>Number of Service Sessions</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>