force-app/main/default/objects/ServiceSchedule__c/fields/NumPresentServiceSessions__c.field-meta.xml
<CustomField>
    <fullName>NumPresentServiceSessions__c</fullName>
    <label>Number of Present Service Sessions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>