force-app/main/default/objects/ServiceSchedule__c/fields/ParticipantCapacity__c.field-meta.xml
<CustomField>
    <fullName>ParticipantCapacity__c</fullName>
    <label>Participant Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>