force-app/main/default/objects/ServiceSchedule__c/fields/ParticipantsEnrolled__c.field-meta.xml
<CustomField>
    <fullName>ParticipantsEnrolled__c</fullName>
    <inlineHelpText>The total number of Service Participants with Status set to Enrolled linked to this Service Schedule</inlineHelpText>
    <label>Participants Enrolled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>