force-app/main/default/objects/ServiceSchedule__c/fields/PrimaryServiceProvider__c.field-meta.xml
<CustomField>
    <fullName>PrimaryServiceProvider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Service Provider</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Schedules</relationshipLabel>
    <relationshipName>Service_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>