force-app/main/default/objects/ServiceSchedule__c/fields/ServiceScheduleEndDate__c.field-meta.xml
<CustomField>
    <fullName>ServiceScheduleEndDate__c</fullName>
    <label>Service Schedule End Date</label>
    <type>Date</type>
</CustomField>