force-app/main/default/objects/ServiceSchedule__c/fields/TotalCapacity__c.field-meta.xml
<CustomField>
    <fullName>TotalCapacity__c</fullName>
    <label>Total Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>