force-app/main/default/objects/ServiceSchedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Service__c</columns>
    <columns>PrimaryServiceProvider__c</columns>
    <columns>OtherServiceProvider__c</columns>
    <columns>TotalCapacity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>