force-app/main/default/objects/ServiceSchedule__c/listViews/UpcomingServiceSchedules.listView-meta.xml
<ListView>
    <fullName>UpcomingServiceSchedules</fullName>
    <columns>NAME</columns>
    <columns>Service__c</columns>
    <columns>FirstSessionStart__c</columns>
    <columns>ParticipantCapacity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FirstSessionStart__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Upcoming Service Schedules</label>
</ListView>